fixed /rail now with walls, improved readability and usage of static objects